--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,97 @@
 body {
-    background-color: lightcyan;
+	background: #2C2C2C;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
 }
-h1, h3, p, h5 {
-    text-align: center;
-  }
+
+.intro {
+	margin: 30px 0px;
+	font-weight: bold;
+}
+
 h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+	color: #ffffff;
+	text-transform: uppercase;
+	font-weight: 800;
 }
 
-h3{
-    font-family: Arial, Helvetica, sans-serif;
+p {
+	font-weight: 600;
 }
 
-.link {
-    text-align: center;
+#quote {
+	margin-top: 10px;
+	color: #FFCD5D;
 }
 
-.task-box {
-    border: 1px solid black;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .task-box h2 {
-    margin-top: 0;
-  }
-  
-  .task-list {
-    margin-top: 10px;
-  }
-  
-  .task-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-  }
-  
-  input[type="checkbox"] {
-    margin-right: 5px;
-  }
+#enter {
+	border: none;
+	padding: 5px 15px;
+	border-radius: 5px;
+	color: #04A1BF;
+	background-color: #025F70;
+	transition: all 0.75s ease;
+	-webkit-transition: all 0.75s ease;
+	-moz-transition: all 0.75s ease;
+	-ms-transition: all 0.75s ease;
+	-o-transition: all 0.75 ease;
+	font-weight: normal;
+}
+
+#enter:hover{
+	background-color: #02798F;
+	color: #FFCD5D;
+}
+
+ul {
+	text-align: left;
+	margin-top: 20px;
+}
+
+
+li {
+	list-style: none;
+	padding: 10px 20px;
+	color: #ffffff;
+	text-transform: capitalize;
+	font-weight: 600;
+	border: 2px solid #025f70;
+	border-radius: 5px;
+	margin-bottom: 10px;
+	background: #4EB9CD;
+	transition: all 0.75s ease;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-ms-transition: all 0.5s ease;
+	-o-transition: all 0.5 ease;
+}
+
+li:hover {
+	background: #76CFE0;
+}
+
+li > button {
+	font-weight: normal;
+	background: none;
+	border: none;
+	float: right;
+	color: #025f70;
+	font-weight: 800;
+}
+
+input {
+	border-radius: 5px;
+	min-width: 65%;
+	padding: 5px;
+	border: none;
+}
+
+
+.done {
+	background: #51DF70 !important;
+	color: #00891E;
+}
+
+.delete {
+	display: none;
+}
